unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/tspa__Visual_Remote_Assistant_Recording__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant Recording</label>
    <nameField>
        <displayFormat>Recording-{0000}</displayFormat>
        <label>Visual Remote Assistant Recording Images</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>