unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__accountId__c.field-meta.xml
<CustomField>
    <fullName>tspa__accountId__c</fullName>
    <label>accountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>