unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__recording_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tspa__recording_End_Time__c</fullName>
    <label>recording End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>