unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__Recording_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Recording_Id__c</fullName>
    <externalId>true</externalId>
    <label>Recording Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>