unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>tspa__Recording_URL__c</fullName>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>