unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>tspa__ReferenceId__c</fullName>
    <label>ReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>