unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__SessionId__c.field-meta.xml
<CustomField>
    <fullName>tspa__SessionId__c</fullName>
    <label>SessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>