unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__sessionShortId__c.field-meta.xml
<CustomField>
    <fullName>tspa__sessionShortId__c</fullName>
    <label>sessionShortId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>