unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tspa__Start_Date__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>