unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__type__c.field-meta.xml
<CustomField>
    <fullName>tspa__type__c</fullName>
    <label>type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>