unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__userId__c.field-meta.xml
<CustomField>
    <fullName>tspa__userId__c</fullName>
    <label>userId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>