unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Recording__c/fields/tspa__Visual_Remote_Assistant_Reports__c.field-meta.xml
<CustomField>
    <fullName>tspa__Visual_Remote_Assistant_Reports__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visual Remote Assistant Reports</label>
    <referenceTo>tspa__Visual_History__c</referenceTo>
    <relationshipLabel>Visual Remote Assistant Recordings</relationshipLabel>
    <relationshipName>Visual_Remote_Assistant_Recordings</relationshipName>
    <type>Lookup</type>
</CustomField>